--- a/themes/fluid/languages/zh-CN.yml
+++ b/themes/fluid/languages/zh-CN.yml
@@ -23,6 +23,11 @@ tag:
   subtitle: '标签'
   post_total: '共计 %d 篇文章'
 
+project:
+  menu: '项目'
+  title: '项目'
+  subtitle: '项目'
+
 about:
   menu: '关于'
   title: '关于'
